prevent select box overflow

--- a/src/app/domains/statistics/statistics.page.scss
+++ b/src/app/domains/statistics/statistics.page.scss
@@ -101,3 +101,11 @@
     display: none;
   }
 }
+
+// Align select box to the right to prevent overflow
+.align-select-box-right.mat-mdc-select-panel {
+  right: 0 !important;
+  left: auto !important;
+  transform-origin: right top !important;
+  position: absolute;
+}
